--- a/ShoppingMall/Views/Shared/_Layout.cshtml
+++ b/ShoppingMall/Views/Shared/_Layout.cshtml
@@ -25,12 +25,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Catalogs" asp-action="Index">目錄管理</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Products" asp-action="Index">商品管理</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
+        @await Component.InvokeAsync("Nav")
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
