--- a/ShoppingMall/Areas/Admin/Views/Products/Edit.cshtml
+++ b/ShoppingMall/Areas/Admin/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingMall.Models.Product
+﻿@model ShoppingMall.Models.ViewModels.ProductViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,8 +9,12 @@
 <h4>Product</h4>
 <hr />
 <div class="row">
+    @if (!string.IsNullOrWhiteSpace(Model.PicturePath))
+    {
+        <img src="@Model.PicturePath" title="@Model.Name" class="w-50"/>
+    }
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -43,6 +47,11 @@
                 <select asp-for="CatalogId" class="form-control" asp-items="ViewBag.CatalogId"></select>
                 <span asp-validation-for="CatalogId" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                 <input asp-for="Picture" type="file">
+                <span asp-validation-for="Picture"></span>          
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
