--- a/ShoppingMall/Areas/Admin/Views/Products/Create.cshtml
+++ b/ShoppingMall/Areas/Admin/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingMall.Models.Product
+﻿@model ShoppingMall.Models.ViewModels.ProductViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create"  enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -40,6 +40,10 @@
             <div class="form-group">
                 <label asp-for="CatalogId" class="control-label"></label>
                 <select asp-for="CatalogId" class ="form-control" asp-items="ViewBag.CatalogId"></select>
+            </div>
+            <div class="form-group">
+                 <input asp-for="Picture" type="file">
+                <span asp-validation-for="Picture"></span>          
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
